--- a/apps/triton/rollout.yaml
+++ b/apps/triton/rollout.yaml
@@ -25,7 +25,7 @@ spec:
             - -c
             - |
               echo "Activating service account..."
-              gcloud auth activate-service-account --key-file=/secrets/eminent-cache-456900-t9-6e636af0d847.json
+              gcloud auth activate-service-account --key-file=/secrets/key.json
               gsutil -m cp -r gs://test-model-artifact/models/* /models/
           volumeMounts:
             - name: model-repo
